Add GitHub workflows, documentation, and CI setup
- Add reusable CI workflow (lint, format, typecheck, e2e, build)
- Add PR workflow to run CI on pull requests to main
- Add release workflow with version validation and binary builds
- Add MIT LICENSE
- Add CONTRIBUTING.md with development guidelines
- Add issue templates (bug report, feature request)
- Add PR template
- Add lint/fmt/check tasks to deno.json
- Fix TypeScript type errors for Deno 2.x compatibility
- Format codebase with deno fmt

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,10 @@
 {
   "tasks": {
+    "lint": "deno lint",
+    "fmt": "deno fmt",
+    "fmt:check": "deno fmt --check",
+    "check": "deno check pngencrypt.ts pngdecrypt.ts",
+
     "pngencrypt": "deno run --allow-read --allow-write --allow-net pngencrypt.ts",
     "pngdecrypt": "deno run --allow-read --allow-write --allow-net pngdecrypt.ts",
 
