Fix build workflow: create build directory before compile

--- a/.github/workflows/pngcrypt.yml
+++ b/.github/workflows/pngcrypt.yml
@@ -95,6 +95,9 @@ jobs:
         with:
           deno-version: v2.x
 
+      - name: Create build directory
+        run: mkdir -p ./build
+
       - name: Build pngencrypt
         run: |
           deno compile \
