--- a/.github/workflows/pngcrypt.yml
+++ b/.github/workflows/pngcrypt.yml
@@ -96,13 +96,13 @@ jobs:
           deno-version: v2.x
 
       - name: Create build directory
-        run: mkdir -p ./build
+        run: mkdir -p ${{ github.workspace }}/build
 
       - name: Build pngencrypt
         run: |
           deno compile \
             --target ${{ matrix.target }} \
-            --output ./build/pngencrypt-${{ matrix.target }} \
+            --output ${{ github.workspace }}/build/pngencrypt-${{ matrix.target }} \
             --allow-read --allow-write --allow-net \
             pngencrypt.ts
 
@@ -110,7 +110,7 @@ jobs:
         run: |
           deno compile \
             --target ${{ matrix.target }} \
-            --output ./build/pngdecrypt-${{ matrix.target }} \
+            --output ${{ github.workspace }}/build/pngdecrypt-${{ matrix.target }} \
             --allow-read --allow-write --allow-net \
             pngdecrypt.ts
 
@@ -118,5 +118,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: binaries-${{ matrix.target }}
-          path: ./build/*
+          path: ${{ github.workspace }}/build/*
           retention-days: 7
