--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,16 +87,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./artifacts
-          pattern: binaries-*
-          merge-multiple: true
-
-      - name: List artifacts
-        run: ls -la ./artifacts/
-
       - name: Create tag
         run: |
           git config user.name "github-actions[bot]"
@@ -111,19 +101,19 @@ jobs:
           name: ${{ inputs.version }}
           prerelease: ${{ inputs.release_type != 'official' }}
           generate_release_notes: true
-          files: |
-            ./artifacts/*
           body: |
             ## Installation
 
-            Download the appropriate binary for your platform:
+            Requires [Deno](https://deno.land/) v2.x or later.
 
-            | Platform | Binary |
-            |----------|--------|
-            | Windows (x64) | `pngencrypt-x86_64-pc-windows-msvc`, `pngdecrypt-x86_64-pc-windows-msvc` |
-            | macOS (Intel) | `pngencrypt-x86_64-apple-darwin`, `pngdecrypt-x86_64-apple-darwin` |
-            | macOS (Apple Silicon) | `pngencrypt-aarch64-apple-darwin`, `pngdecrypt-aarch64-apple-darwin` |
-            | Linux (x64) | `pngencrypt-x86_64-unknown-linux-gnu`, `pngdecrypt-x86_64-unknown-linux-gnu` |
-            | Linux (ARM64) | `pngencrypt-aarch64-unknown-linux-gnu`, `pngdecrypt-aarch64-unknown-linux-gnu` |
+            ```sh
+            # Clone the repository
+            git clone https://github.com/${{ github.repository }}.git
+            cd pngcrypt
 
-            See the [README](https://github.com/${{ github.repository }}#readme) for usage instructions.
+            # Run directly
+            echo ${secret} | deno task pngencrypt file.zip mask.png encrypted.png
+            echo ${secret} | deno task pngdecrypt encrypted.png file.zip
+            ```
+
+            See the [README](https://github.com/${{ github.repository }}#readme) for full usage instructions.
